--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ name = "pyc_utils"
 version = "0.1.1"
 description = "Fast utilities for Python, with optional C extensions"
 readme = "README.md"
-requires-python = ">=3.12"
-license = {text = "MIT"}
+requires-python = ">=3.13"
+license = "MIT"
 authors = [{name = "PietraVivente"}]
 
 [tool.setuptools]
